Corrected issues with RTL and icon z-index.

--- a/css/px-context-browser.css
+++ b/css/px-context-browser.css
@@ -2952,11 +2952,11 @@ header {
       .level li .opener.unopenable {
         display: none; }
   .level li:not(.selected) .opener.openable {
-    display: none; }
+    visibility: hidden; }
   .level:not(.selected) li:not(.selected) .opener.openable {
-    display: none; }
+    visibility: hidden; }
   .level li:not(.selected):hover .opener.openable {
-    display: inline; }
+    visibility: visible; }
 
 .breadcrumb, .selectable-item {
   cursor: pointer; }
@@ -3657,20 +3657,13 @@ header {
   background-color: #3693f8;
   color: white; }
 
-span.spacer, span.spacer-x, span.spacer-y, span.spacer-2, span.spacer-x-2, span.spacer-y-2 {
-  display: inline-block; }
-
 .spacer, .spacer-x {
   width: 1ex; }
-
-.spacer, .spacer-y {
-  height: 1ex; }
-
-.spacer-2, .spacer-x-2 {
+.spacer, .spacer-2-x {
   width: 2ex; }
 
-.spacer-2, .spacer-y-2 {
-  height: 2ex; }
+span.spacer, span.spacer-x, span.spacer-2, span.spacer-2-x {
+  display: inline-block; }
 
 .flex, .flex-x, .flex-y {
   /* OLD - iOS 6-, Safari 3.1-6 */
@@ -3680,31 +3673,22 @@ span.spacer, span.spacer-x, span.spacer-y, span.spacer-2, span.spacer-x-2, span.
   display: -webkit-flex;
   /* NEW - Chrome */
   display: flex; }
-
-.flex.align-center, .flex-x.align-center, .flex-y.align-center {
-  -webkit-align-items: center;
-  -ms-flex-align: center;
-  align-items: center; }
-
 .flex-x {
   -webkit-flex-direction: row;
   -ms-flex-direction: row;
   flex-direction: row; }
-
 .flex-y {
   -webkit-flex-direction: column;
   -ms-flex-direction: column;
   flex-direction: column; }
-
 .flex-1 {
   -webkit-flex: 1;
   -ms-flex: 1;
   flex: 1; }
 
-.full-x, .full-xy {
+.full, .full-x {
   width: 100%; }
-
-.full-y, .full-xy {
+.full, .full-y {
   height: 100%; }
 
 .column-browser {
@@ -3820,6 +3804,8 @@ span.spacer, span.spacer-x, span.spacer-y, span.spacer-2, span.spacer-x-2, span.
   .column-browser > div > div {
     background: white;
     overflow: hidden;
+    -webkit-transform: translateZ(0);
+            transform: translateZ(0);
     transition: width 0.35s ease 0s, min-width 0.35s ease 0s, margin-left 0.35s ease 0s, margin-right 0.35s ease 0s, opacity 0.35s ease 0s;
     box-sizing: border-box;
     border: 1px solid #DDD;
